libs/sensor_coap/include/sensor_coap/sensor_coap.h

//  sensor_value represents a decoded sensor data value. Since temperature may be integer (raw)
//  or float (computed), we use the struct to return both integer and float values.
//  val_type indicates whether it's an integer or float.
struct sensor_value {
    const char *key;        //  "t" for raw temp, "tmp" for computed. When transmitted to CoAP Server or Collector Node, the key (field name) to be used.
    int         val_type;   //  The type of the sensor value. SENSOR_VALUE_TYPE_INT32 for int, SENSOR_VALUE_TYPE_FLOAT for float.
    uint16_t    int_val;    //  For raw temp, contains the raw temp integer value
    float       float_val;  //  For computed temp, contains the computed temp float value
};
struct oc_server_handle;
//  Init the Sensor CoAP module. Called by sysinit() during startup, defined in pkg.yml.
void init_sensor_coap(void);
//  Return true if the Sensor CoAP is ready for sending sensor data.
bool sensor_coap_ready(void);
//  Create a new sensor post request to send to CoAP server.  coap_content_format is 
//  APPLICATION_JSON or APPLICATION_CBOR. If coap_content_format is 0, use the default format.
bool init_sensor_post(struct oc_server_handle *server, const char *uri, int coap_content_format);
//  Send the sensor post request to CoAP server.
bool do_sensor_post(void);
extern struct json_encoder coap_json_encoder;  //  Note: We don't support concurrent encoding of JSON messages.
extern struct json_value coap_json_value;      //  Custom JSON value being encoded.
void json_rep_new(struct os_mbuf *m);   //  Prepare to write a new JSON CoAP payload into the mbuf.
void json_rep_reset(void);              //  Close the current JSON CoAP payload.  Erase the JSON encoder.
int json_rep_finalize(void);            //  Finalise the payload and return the payload size.
//  Start the JSON representation.  Assume top level is object.
//  --> {
void json_rep_start_root_object(void);
//  End the JSON representation.  Assume top level is object.
//  {... --> {...}
void json_rep_end_root_object(void);