logs/os-expanded.h

typedef __uint8_t uint8_t ;
typedef __uint16_t uint16_t ;
#define bool _Bool
#define sysinit() do { sysinit_start(); sysinit_app(); sysinit_end(); } while (0)
void os_init(int (*fn)(int argc, char **argv));
struct os_mbuf_pool {




    uint16_t omp_databuf_len;



    struct os_mempool *omp_pool;

    struct { struct os_mbuf_pool *stqe_next; } omp_next;
};
struct os_mbuf {



    uint8_t *om_data;



    uint8_t om_flags;



    uint8_t om_pkthdr_len;



    uint16_t om_len;




    struct os_mbuf_pool *om_omp;

    struct { struct os_mbuf *sle_next; } om_next;




    uint8_t om_databuf[0];
};