rust/mynewt/src/libs/sensor_coap.rs

#[repr(C)]
pub struct sensor_value {
    pub key: *const ::cty::c_char,
    pub val_type: ::cty::c_int,
    pub int_val: u16,
    pub float_val: f32,
}
impl Default for sensor_value {
    fn default() -> Self {
        unsafe { ::core::mem::zeroed() }
    }
}
#[proc_macros::safe_wrap(attr)] extern "C" {
    #[doc = "  Init the Sensor CoAP module. Called by sysinit() during startup, defined in pkg.yml."]
    pub fn init_sensor_coap();
}
#[proc_macros::safe_wrap(attr)] extern "C" {
    pub fn sensor_coap_ready() -> bool;
}
#[proc_macros::safe_wrap(attr)] extern "C" {
    pub fn init_sensor_post(
        server: *mut oc_server_handle,
        uri: *const ::cty::c_char,
        coap_content_format: ::cty::c_int,
    ) -> bool;
}
#[proc_macros::safe_wrap(attr)] extern "C" {
    pub fn do_sensor_post() -> bool;
}
#[repr(C)]
pub struct json_value__bindgen_ty_1 {
    pub u: __BindgenUnionField<u64>,
    pub fl: __BindgenUnionField<f32>,
    pub str: __BindgenUnionField<*mut ::cty::c_char>,
    pub composite: __BindgenUnionField<json_value__bindgen_ty_1__bindgen_ty_1>,
    pub bindgen_union_field: [u64; 2usize],
}
#[repr(C)]
pub struct json_value__bindgen_ty_1__bindgen_ty_1 {
    pub keys: *mut *mut ::cty::c_char,
    pub values: *mut *mut json_value,
}
impl Default for json_value__bindgen_ty_1__bindgen_ty_1 {
    fn default() -> Self {
        unsafe { ::core::mem::zeroed() }
    }
}
impl Default for json_value__bindgen_ty_1 {
    fn default() -> Self {
        unsafe { ::core::mem::zeroed() }
    }
}
pub type json_write_func_t = ::core::option::Option<
    unsafe extern "C" fn(
        buf: *mut ::cty::c_void,
        data: *mut ::cty::c_char,
        len: ::cty::c_int,
    ) -> ::cty::c_int,
>;
#[proc_macros::safe_wrap(attr)] extern "C" {
    pub static mut coap_json_encoder: json_encoder;
}
#[proc_macros::safe_wrap(attr)] extern "C" {
    pub static mut coap_json_value: json_value;
}
#[proc_macros::safe_wrap(attr)] extern "C" {
    #[doc = "  Prepare to write a new JSON CoAP payload into the mbuf."]
    pub fn json_rep_new(m: *mut os_mbuf);
}
#[proc_macros::safe_wrap(attr)] extern "C" {
    #[doc = "  Close the current JSON CoAP payload.  Erase the JSON encoder."]
    pub fn json_rep_reset();
}
#[proc_macros::safe_wrap(attr)] extern "C" {
    #[doc = "  Finalise the payload and return the payload size."]
    pub fn json_rep_finalize() -> ::cty::c_int;
}
#[proc_macros::safe_wrap(attr)] extern "C" {
    #[doc = " Start the JSON representation.  Assume top level is object."]
    #[doc = " ```"]
    #[doc = " --> {"]
    #[doc = " ```"]
    pub fn json_rep_start_root_object();
}
#[proc_macros::safe_wrap(attr)] extern "C" {
    #[doc = "  End the JSON representation.  Assume top level is object."]
    #[doc = "  ```"]
    #[doc = "  {... --> {...}"]
    #[doc = "  ```"]
    pub fn json_rep_end_root_object();
}
#[proc_macros::safe_wrap(attr)] extern "C" {
    pub static mut coap_json_mbuf: *mut os_mbuf;
}
